feat(app): line number width, pre font

--- a/packages/app/src/style/layout.css
+++ b/packages/app/src/style/layout.css
@@ -81,6 +81,10 @@ a {
   color: var(--c-brand);
 }
 
+pre {
+  font-family: var(--font-family-mono);
+}
+
 .border-left {
   border-top: none;
   border-bottom: none;
