feat(app): upload response

--- a/packages/app/src/style/layout.css
+++ b/packages/app/src/style/layout.css
@@ -85,6 +85,10 @@ pre, code {
   font-family: var(--font-family-mono);
 }
 
+.text-brand {
+  color: var(--c-brand);
+}
+
 .border-left {
   border-top: none;
   border-bottom: none;
