--- a/packages/app/src/style/layout.css
+++ b/packages/app/src/style/layout.css
@@ -85,6 +85,21 @@ pre, code {
   font-family: var(--font-family-mono);
 }
 
+#nprogress {
+  pointer-events: none;
+}
+
+#nprogress .bar {
+  background: #395;
+  opacity: 0.75;
+  position: fixed;
+  z-index: 1031;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+}
+
 .text-brand {
   color: var(--c-brand);
 }
