feat: use woff instead of ttf

--- a/packages/app/src/style/layout.css
+++ b/packages/app/src/style/layout.css
@@ -15,7 +15,7 @@
 
 @font-face {
   font-family: 'Fira Code Regular';
-  src: url('/FiraCode-Regular.ttf');
+  src: url('/FiraCode-Regular.woff');
 }
 
 html {
